[package]
name = "pass-vault"
version = "0.1.0"
authors = ["Graham Christensen <graham@grahamc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dialoguer = "0.7"
qrcode = { version = "0.12", default-features = false }
structopt = "0.3"
tempfile = "3.2"
